fixed padding issue on mobile navbar

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,5 +1,6 @@
 #navigation {
   background-color: #FDF3E7;
+  padding: 10px;
 }
 
 nav {
